--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "firebase": "^12.6.0"
+    "firebase": "^12.6.0",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
